# Eye_clsfy

./: README.md  env-yz-gpu026.sh
data_set/: gpu026.txt
evalution/: Draw_curve.py  get_result.py  predict.py  readme.md
example/: README.md  Run_eye.sh  Run_eye.sh.example  env_yz-gpu026.sh
horizon-caffe/: eyeclassify_full_deploy.prototxt  eyeclassify_solver.prototxt  eyeclassify_train_test.prototxt  train_full.sh
horizon-caffe/tools/: README.md  count_files.py  data_list.py  disturb_in_eye_pic.py  disturb_in_eye_pic_gray.py  disturb_in_pic.py  disturb_in_pic.sh  disturb_in_pic_gray.py  disturb_on_multi_cpus.py  disturb_pic.py  disturb_pic.sh  env.sh  generate_img_lst.py  list_glass_classify_train_files.py  list_train_files.py  list_train_folders.py  make_lst_file_txt.py  my_preprocess.ipynb  pick_out_and_save_wrong_predict.py  plus_one_or_zero.py  preprocess.ipynb  rename.py  rename.sh  rename_files.py  replace_file_text.py  split_file.py  train_folders.txt  train_model.py
horizon-caffe/tools/.ipynb_checkpoints/: eyeclassify_mxnetmodel-checkpoint.ipynb  glass_classify-checkpoint.ipynb  my_preprocess-checkpoint.ipynb  scripts-checkpoint.ipynb
mxnet/: Gap_ec.py  README.md  bn_ec.py
mxnet/predict-cpp/: CMakeLists.txt  MxnetPred.cpp  MxnetPred.h  example.cpp  model.params_nhwc  model.symbo.json  synset.txt
mxnet/tools/: PR_new.py  README.md  convert_caffeList_to_mxnetList.py  get_result_file.py  nhwc2nchw.py  pick_epoch.py  predict.py
